# bg3_py

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  requirements.txt
bg3/: __init__.py  ability.py  armour.py  background.py  cantrip.py  characteristic.py  class_action.py  class_resources.py  classes.py  cost.py  entity.py  favoured_enemy.py  feat.py  feature.py  fighting_style.py  levelling.py  levelling_progression.py  natural_explorer.py  proficiency.py  races.py  skill.py  spell.py  spell_new.py  spell_progression.py  spell_slot.py  subclass.py  weapon.py
bg3/cli/: __init__.py  build_spell_list.py  common.py  favoured_enemies.json  fighting_styles.json  natural_explorers.json  overlapping_spells.py  spells.json
tests/: background_test.py  characteristic_test.py  classes_test.py  entity_test.py  levelling_progression_test.py  races_test.py  skill_test.py  test_spell_slots.py
