[build-system]
requires = ["hatchling >= 1.25.0"]
build-backend = "hatchling.build"

[project]
name = "bg3"
description = "Bg3 game engine"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{name = "Guillaume Le Pape", email = "gui.lepape25@gmail.com"}]
classifiers = ["Programming Language :: Python"]
dependencies = [
    "beautifulsoup4==4.12.3",
    "fastapi==0.112.0",
    "httpx==0.27.2",
    "typer==0.12.5",
]
dynamic = ["version"]

[project.scripts]
bg3 = "bg3.cli:app"

[tool.hatch.version]
path = "bg3/__init__.py"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "INP"]

[tool.pytest.ini_options]
log_file = "bg3_test.log"
log_file_level = "INFO"

[tool.mypy]
plugins = ["pydantic.mypy"]
